# concerto

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  composer.json  deny.toml
.github/badges/: coverage.json
.github/workflows/: ci.yml
docs/: lockfile.md
scripts/: bench-composer.sh  bench-concerto.Dockerfile  bench-concerto.sh
src/: composer.rs  error.rs  install_event.rs  installer.rs  lockfile.rs  main.rs  package_store.rs  packagist.rs  platform.rs
src/autoload/: mod.rs  tests.rs
src/cli/: mod.rs  tests.rs
src/composer/: mod.rs  tests.rs
src/http/: mod.rs  tests.rs
src/installer/: lockfile_install.rs  mod.rs  resolved_install.rs  tests.rs
src/lockfile/: mod.rs  tests.rs
src/output/: mod.rs  plain.rs  tests.rs  tui.rs
src/package_store/: archive.rs  mod.rs  paths.rs
src/packagist/: mod.rs  tests.rs
src/perf/: mod.rs
src/platform/: mod.rs  tests.rs
src/resolver/: mod.rs
tests/: cli.rs  install_offline.rs
tests/fixtures/: README.md
tests/fixtures/packagist/: acme-app.json  acme-log.json  acme-platform-choice.json  acme-platform-lock.json  monolog-monolog.json  psr-log.json
tests/support/: mod.rs
