[package]
name = "concerto"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
blake3 = "1.8.5"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
safe_unzip = "0.1.6"
semver-php = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha1_smol = "1.0.1"
pubgrub = "0.4.0"
